--- a/prework.html
+++ b/prework.html
@@ -28,7 +28,7 @@
 <header class="siteHeader" role="banner">
 	<div class="wrapper">
 		<h1 class="logo"><a href="/">The Iron Yard</a></h1>
-		<p class="className">Web Design <span>January 2015</span></p>
+		<p class="className">Web Design <span>January 2015 - Columbia, SC</span></p>
 		<nav class="pageNav">
 			<ul>
 				<li><a href="timeline.html">Timeline</a></li>
