Update contact info

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,102 @@
 
 <main class="mainContent" id="mainContent" role="main">
 	<h1>Contact</h1>
+	<p>Your instructor, teaching assistants, and campus directors are here for you. If you have questions, concerns, need feedback, or just want to chat, please feel free to get in touch.</p>
+
+	<div class="contact">
+		<h2>Greg Lunn</h2>
+		<p><b>Instructor</b><br>
+		<ul class="contactInfo">
+			<li><span>Phone:</span> (803) 351-2200</li>
+			<li><span>Email:</span> 
+				<script>
+				{ coded = "6S86@Gb8dSqt7TSZ.Mqx"
+				  key = "YICW8A5kilVGswDrN09F1BvgOuX3dmhRynjSc2foaEQ6HLeJZxbp7t4UMKPqTz"
+				  shift=coded.length
+				  link=""
+				  for (i=0; i<coded.length; i++) {
+				    if (key.indexOf(coded.charAt(i))==-1) {
+				      ltr = coded.charAt(i)
+				      link += (ltr)
+				    }
+				    else {     
+				      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+				      link += (key.charAt(ltr))
+				    }
+				  }
+				document.write("<a href='mailto:"+link+"'>"+link+"</a>")
+				}
+				//-->
+				</script>
+			</li>
+			<li><span>Hipchat:</span> @Greg</li>
+			<li><span>Skype:</span> gregorylunn</li>
+			<li><span>Twitter: </span><a href="http://www.twitter.com/greglunn">@greglunn</a></li>
+		</ul>
+	</div>
+
+	<div class="contact">
+		<h2>Giovanni Difeterici</h2>
+		<p><b>Campus Director</b><br>
+		<ul class="contactInfo">
+			<li><span>Phone:</span> </li>
+			<li><span>Email:</span> 
+				<script>
+				{ coded = "3VFwS22V@sJXVZF2WSZ5.NFo"
+				  key = "I3xv5p6PYCWUfm2sceJSkLjiOr0wAzGB9uHlKoTgNXdDQbqVyZ81nt74haMERF"
+				  shift=coded.length
+				  link=""
+				  for (i=0; i<coded.length; i++) {
+				    if (key.indexOf(coded.charAt(i))==-1) {
+				      ltr = coded.charAt(i)
+				      link += (ltr)
+				    }
+				    else {     
+				      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+				      link += (key.charAt(ltr))
+				    }
+				  }
+				document.write("<a href='mailto:"+link+"'>"+link+"</a>")
+				}
+				</script>
+			</li>
+			<li><span>Hipchat:</span> </li>
+			<li><span>Skype:</span> </li>
+			<li><span>Twitter: </span><a href="http://www.twitter.com/giodef">@giodef</a></li>
+		</ul>
+	</div>
+
+	<div class="contact">
+		<h2>Gene Crawford</h2>
+		<p><b>Campus Director</b><br>
+		<ul class="contactInfo">
+			<li><span>Phone:</span> </li>
+			<li><span>Email:</span> 
+				<script>
+				{ coded = "kqoq@2gquQHojpQA.JHL"
+				  key = "BhbS2TGj9z516eYvnA0uFgVCPsOZaMcrUqI8oDmwxkR4X3tWpyJQN7KEHlLdfi"
+				  shift=coded.length
+				  link=""
+				  for (i=0; i<coded.length; i++) {
+				    if (key.indexOf(coded.charAt(i))==-1) {
+				      ltr = coded.charAt(i)
+				      link += (ltr)
+				    }
+				    else {     
+				      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+				      link += (key.charAt(ltr))
+				    }
+				  }
+				document.write("<a href='mailto:"+link+"'>"+link+"</a>")
+				}
+				</script>
+			</li>
+			<li><span>Hipchat:</span> </li>
+			<li><span>Skype:</span> gene803</li>
+			<li><span>Twitter: </span><a href="http://www.twitter.com/genecrawford">@genecrawford</a></li>
+		</ul>
+	</div>
+	
 	
 
 </main> <!-- /.mainContent -->
