Update contact info

--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
 			</li>
 			<li><span>Hipchat:</span> </li>
 			<li><span>Skype:</span> </li>
-			<li><span>Twitter: </span><a href="http://www.twitter.com/giodef">@giodef</a></li>
+			<li><span>Twitter: </span><a href="http://www.twitter.com/giodif">@giodif</a></li>
 		</ul>
 	</div>
 
