--- a/schedule.html
+++ b/schedule.html
@@ -48,22 +48,18 @@
 
 	<table class="schedTable">
 		<tr>
-			<th>Monday</th>
-			<td rowspan="4" class="lecture">Lecture</td>
-			<td rowspan="4" class="lab">Lab</td>
-		</tr>
-		<tr>
-			<th>Tuesday</th>
-		</tr>
-		<tr>
-			<th>Wednesday</th>
-		</tr>
-		<tr>
-			<th>Thursday</th>
-		</tr>
-		<tr>
+			<td>&nbsp;</td>
+			<th>Monday-Thursday</th>
 			<th>Friday</th>
-			<td colspan="2" class="lab">Lab</td>
+		</tr>
+		<tr>
+			<th class="daypart">AM</th>
+			<td class="lecture">Lecture</td>
+			<td rowspan="2" class="lab">Lab</td>
+		</tr>
+		<tr>
+			<th class="daypart">PM</th>
+			<td class="lab">Lab</td>
 		</tr>
 	</table>
 
