--- a/prework.html
+++ b/prework.html
@@ -27,7 +27,7 @@
 
 <header class="siteHeader" role="banner">
 	<div class="wrapper">
-		<h1 class="logo"><a href="/">The Iron Yard</a></h1>
+		<h1 class="logo"><a href="index.html">The Iron Yard</a></h1>
 		<p class="className">Web Design <span>January 2015 - Columbia, SC</span></p>
 		<nav class="pageNav">
 			<ul>
