Add contact info

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 		<h2>Giovanni Difeterici</h2>
 		<p><b>Campus Director</b><br>
 		<ul class="contactInfo">
-			<li><span>Phone:</span> </li>
+			<li><span>Phone:</span> (803) 873 9299</li>
 			<li><span>Email:</span> 
 				<script>
 				{ coded = "3VFwS22V@sJXVZF2WSZ5.NFo"
@@ -102,8 +102,8 @@
 				}
 				</script>
 			</li>
-			<li><span>Hipchat:</span> </li>
-			<li><span>Skype:</span> </li>
+			<li><span>Hipchat:</span> @gio</li>
+			<li><span>Skype:</span> giovannidifeterici</li>
 			<li><span>Twitter: </span><a href="http://www.twitter.com/giodif">@giodif</a></li>
 		</ul>
 	</div>
