--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 				//-->
 				</script>
 			</li>
-			<li><span>Hipchat:</span> @Greg</li>
+			<li><span>Hipchat:</span> @greg</li>
 			<li><span>Skype:</span> gregorylunn</li>
 			<li><span>Twitter: </span><a href="http://www.twitter.com/greglunn">@greglunn</a></li>
 		</ul>
@@ -81,7 +81,7 @@
 		<h2>Giovanni Difeterici</h2>
 		<p><b>Campus Director</b><br>
 		<ul class="contactInfo">
-			<li><span>Phone:</span> (803) 873 9299</li>
+			<li><span>Phone:</span> (803) 873-9299</li>
 			<li><span>Email:</span> 
 				<script>
 				{ coded = "3VFwS22V@sJXVZF2WSZ5.NFo"
