--- a/assignments.html
+++ b/assignments.html
@@ -42,12 +42,13 @@
 </header> <!-- /.siteHeader -->
 
 <main class="mainContent" id="mainContent" role="main">
-	<div class="homeFeature">
-		<h1>Welcome to The Iron Yard!</h1>
-		<p>Welcome to the 2015 Web Design class at The Iron Yard Columbia! You're about to begin a fast-paced, exciting adventure in web development.</p>
-		<p>This site provides useful information on <a href="timeline.html">timelines</a>, <a href="schedule.html">schedules</a>, <a href="policies.html">policies</a> and <a href="prework.html">course pre-work</a>, as well as <a href="contact.html">contact information</a> for your instructor, teaching assistants, and campus directors.</p>
-		<p>Here’s to an exciting 2015!</p>
-	</div>
+	<h1>Assignments</h1>
+
+	<h2>Week 1</h2>
+	<ul>
+		<li><a href="assignments/010515.html">Monday, January 5</a></li>
+	</ul>
+
 </main> <!-- /.mainContent -->
 
 <script src="js/script.js"></script>
