--- a/timeline.html
+++ b/timeline.html
@@ -34,7 +34,7 @@
 				<li><a href="timeline.html">Timeline</a></li>
 				<li><a href="schedule.html">Schedule</a></li>
 				<li><a href="policies.html">Policies</a></li>
-				<li><a href="prework.html">Pre-work</a></li>
+				<li><a href="assignments.html">Assignments</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
