--- a/assignments/010515.html
+++ b/assignments/010515.html
@@ -27,15 +27,15 @@
 
 <header class="siteHeader" role="banner">
 	<div class="wrapper">
-		<h1 class="logo"><a href="index.html">The Iron Yard</a></h1>
+		<h1 class="logo"><a href="../index.html">The Iron Yard</a></h1>
 		<p class="className">Web Design <span>January 2015 - Columbia, SC</span></p>
 		<nav class="pageNav">
 			<ul>
-				<li><a href="timeline.html">Timeline</a></li>
-				<li><a href="schedule.html">Schedule</a></li>
-				<li><a href="policies.html">Policies</a></li>
-				<li><a href="assignments.html">Assignments</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="../timeline.html">Timeline</a></li>
+				<li><a href="../schedule.html">Schedule</a></li>
+				<li><a href="../policies.html">Policies</a></li>
+				<li><a href="../assignments.html">Assignments</a></li>
+				<li><a href="../contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</div> <!-- /.wrapper -->
