Add John's contact info

--- a/contact.html
+++ b/contact.html
@@ -138,6 +138,37 @@
 			<li><span>Twitter: </span><a href="http://www.twitter.com/genecrawford">@genecrawford</a></li>
 		</ul>
 	</div>
+
+	<div class="contact">
+		<h2>John Hunt</h2>
+		<p><b>Teaching Assistant</b><br>
+		<ul class="contactInfo">
+			<li><span>Phone:</span> (801) 836-5217</li>
+			<li><span>Email:</span> 
+				<script>
+				{ coded = "XQVt21Or2VZt9@fx1rH.vQx"
+				  key = "QHVLDX0Orp9xCzIeKBWa84ycwEnbdNAYgPSuTkqolh13jFvi6tm2JRGfMUZs75"
+				  shift=coded.length
+				  link=""
+				  for (i=0; i<coded.length; i++) {
+				    if (key.indexOf(coded.charAt(i))==-1) {
+				      ltr = coded.charAt(i)
+				      link += (ltr)
+				    }
+				    else {     
+				      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+				      link += (key.charAt(ltr))
+				    }
+				  }
+				document.write("<a href='mailto:"+link+"'>"+link+"</a>")
+				}
+				</script>
+			</li>
+			<li><span>Hipchat:</span> </li>
+			<li><span>Skype:</span> isleepinpajamas</li>
+			<li><span>Twitter: </span><a href="http://www.twitter.com/genecrawford">@johndavidhunt</a></li>
+		</ul>
+	</div>
 	
 	
 
