--- a/assignments.html
+++ b/assignments.html
@@ -47,6 +47,7 @@
 	<h2>Week 1</h2>
 	<ul>
 		<li><a href="assignments/010515.html">Monday, January 5</a></li>
+		<li><a href="assignments/010615.html">Tuesday, January 6</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
