--- a/assignments/010615.html
+++ b/assignments/010615.html
@@ -49,7 +49,7 @@
 	<ol>
 		<li>Run <code>git init</code> in the "outlanderspices" directory.</li>
 		<li>Add a <a href="https://raw.githubusercontent.com/greglunn/examplefiles/master/.gitignore">.gitignore</a> file to the directory.</li>
-		<li>Add a README.md file to the directory, with a title and a description.</li>
+		<li>OPTIONAL: Add a README.md file to the directory, with a title and a description.</li>
 		<li>Run <code>git add</code> to stage all files in this directory, and run <code>git commit -m "message"</code> to commit them.</li>
 		<li>Create a new repository on your GitHub account called "outlanderspices"</li>
 		<li>Use the commands from GitHub to link your remote repository to your local files.</li>
@@ -108,7 +108,7 @@
 
 	<h2>Beast Mode:</h2>
 	<ol>
-		<li>Create a page called "orderonline.html" with an appropriate order form. How would you accept orders for a site that sells spices? Wat type of information would you need to collect?</li>
+		<li>Create a page called "orderonline.html" with an appropriate order form. How would you accept orders for a site that sells spices? What type of information would you need to collect?</li>
 		<li>Create a "Locations" page for Outlander Spices. Where are their stores located? What types of information would the user hope to find on this page? How would that content be marked up in HTML?</li>
 	</ol>
 
