--- a/assignments.html
+++ b/assignments.html
@@ -48,6 +48,7 @@
 	<ul>
 		<li><a href="assignments/010515.html">Monday, January 5</a></li>
 		<li><a href="assignments/010615.html">Tuesday, January 6</a></li>
+		<li><a href="assignments/010715.html">Wednesday, January 7</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
