--- a/assignments/010715.html
+++ b/assignments/010715.html
@@ -66,7 +66,7 @@
 		<li>Add the "turmeric.jpg" and "iso9000.jpg" images to the homepage in the "Featured Product" section. Place the images just before the paragraphs that you see in the design. (Later, we will position them with CSS)</li>
 		<li>Create a page footer with copyright information. Style it to match the green footer bar in the design.</li>
 		<li>Link your stylesheet to all of the other html pages.</li>
-		<li>On products.html, change the products listing to be a table with three a column of images for each spice (from the images folder), a column with the spice name and details, and a column for price. Include appropriate table headers. Style the text inside the table.</li>
+		<li>On products.html, change the products listing to be a table with three columns: a column of images for each spice (from the images folder), a column with the spice name and details, and a column for price. Include appropriate table headers. Style the text inside the table.</li>
 	</ol>
 
 	<h2>Beast Mode</h2>
