--- a/assignments.html
+++ b/assignments.html
@@ -49,6 +49,7 @@
 		<li><a href="assignments/010515.html">Monday, January 5</a></li>
 		<li><a href="assignments/010615.html">Tuesday, January 6</a></li>
 		<li><a href="assignments/010715.html">Wednesday, January 7</a></li>
+		<li><a href="assignments/010815.html">Thursday, January 8</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
