--- a/assignments.html
+++ b/assignments.html
@@ -52,6 +52,11 @@
 		<li><a href="assignments/010815.html">Thursday, January 8</a></li>
 	</ul>
 
+	<h2>Week 2</h2>
+	<ul>
+		<li><a href="assignments/011215.html">Monday, January 12</a></li>
+	</ul>
+
 </main> <!-- /.mainContent -->
 
 <script src="js/script.js"></script>
