Add Tuesday assignment

--- a/assignments.html
+++ b/assignments.html
@@ -55,6 +55,7 @@
 	<h2>Week 2</h2>
 	<ul>
 		<li><a href="assignments/011215.html">Monday, January 12</a></li>
+		<li><a href="assignments/011315.html">Tuesday, January 13</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
