--- a/assignments/011315.html
+++ b/assignments/011315.html
@@ -53,6 +53,7 @@
 		<li>Include proper semantic tags, and check your HTML against the validator and the outliner.</li>
 		<li>Use the SVG version of the logo with a PNG fallback.</li>
 		<li>Include a favicon and an apple-touch-icon.png.</li>
+		<li>Commit your changes using Git, and push to a new repository on GitHub called, "concept".</li>
 	</ol>
 
 	<h3>Beast Mode</h3>
