--- a/timeline.html
+++ b/timeline.html
@@ -61,32 +61,33 @@
 		<p>Image formats, sizing</p>
 
 		<p>CSS<br>
-		Basic Styling</p>
+		Basic Styling<br>
+		Box Model<br>
+		Floats<br>
+		Postioning</p>
 
-		<p>Git, Github<br>
-		Time Tracking</p>
+		<p>Git, Github</p>
 	</section>
 
 	<section class="week">
 		<h1 class="h2">WEEK 2:</h1>
-		<p>CSS<br>
-		Box Model<br>
-		Floats<br>
-		Postioning<br>
-		CSS Animations<br>
+		<p>CSS3<br>
+		Advanced CSS3 Styling<br>
+		CSS Transforms, Transitions<br>
 		Media Queries<br>
-		Responsive Design</p>
 
-		<p>SASS, Compass</p>
-
-		<p>Mobile First Design<br>
-		Object-Oriented CSS</p>
+		<p>Object-Oriented CSS</p>
+		
+		<p>Responsive Design<br>
+		Mobile First Design</p>
 	</section>
 	
 	<section class="week">
 		<h1 class="h2">WEEK 3:</h1>
 		<p>JavaScript (overview)<br>
 			jQuery</p>
+
+		<p>SASS, Compass</p>
 
 		<p>Content Strategy<br>
 		User-Centered Design</p>
