--- a/timeline.html
+++ b/timeline.html
@@ -53,17 +53,14 @@
 	<section class="week">
 		<h1 class="h2">WEEK 1:</h1>
 		<p>HTML<br>
-		Syntax<br>
-		Basic Structure<br>
-		Semantics<br>
-		Links</p>
+		Syntax, Structure, Semantics</p>
 
 		<p>Image formats, sizing</p>
 
 		<p>CSS<br>
 		Basic Styling<br>
 		Box Model<br>
-		Floats<br>
+		Layout<br>
 		Postioning</p>
 
 		<p>Git, Github</p>
@@ -77,7 +74,7 @@
 		Media Queries<br>
 
 		<p>Object-Oriented CSS</p>
-		
+
 		<p>Responsive Design<br>
 		Mobile First Design</p>
 	</section>
