--- a/assignments.html
+++ b/assignments.html
@@ -57,6 +57,7 @@
 		<li><a href="assignments/011215.html">Monday, January 12</a></li>
 		<li><a href="assignments/011315.html">Tuesday, January 13</a></li>
 		<li><a href="assignments/011415.html">Wednesday, January 14</a></li>
+		<li><a href="assignments/011515.html">Thursday, January 15</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
