--- a/assignments/011515.html
+++ b/assignments/011515.html
@@ -62,7 +62,7 @@
 
 	<h2>Beast Mode</h2>
 	<ul>
-		<li>Complete the other main pages for the Columbia Museum of Art, as linked in the main navigation. Use the comnet found on their current site. <a href="http://www.columbiamuseum.org/about/">http://www.columbiamuseum.org/about/</a> Style the new pages with eth same fonts, colors, and responsiveness as the example above. Include the secondary nav at the bottom of the page in mobile views, and as a sidebar as teh site gets wide enough.</li>
+		<li>Complete the other main pages for the Columbia Museum of Art, as linked in the main navigation. Use the content found on their current site. <a href="http://www.columbiamuseum.org/about/">http://www.columbiamuseum.org/about/</a> Style the new pages with the same fonts, colors, and responsiveness as the example above. Include the secondary nav at the bottom of the page in mobile views, and as a sidebar as the site gets wide enough.</li>
 	</ul>
 
 </main> <!-- /.mainContent -->
