--- a/assignments/011515.html
+++ b/assignments/011515.html
@@ -55,7 +55,7 @@
 				<li><a href="http://greglunn.github.io/cma/design/max.html">Maximum, above 1000px</a></li>
 			</ol>
 		</li>
-		<li>Content and image assets are here: <a href="https://github.com/greglunn/cma">https://github.com/greglunn/responsivedemo</a>.</li>
+		<li>Content and image assets are here: <a href="https://github.com/greglunn/cma">https://github.com/greglunn/cma</a>.</li>
 		<li>Build <b>Mobile First&trade;</b>. Start with the smallest size styles, and use min-width @media queries to alter the styles as the page gets wider.</li>
 		<li>Use Git to commit your work, and push to a repository called "cma" on GitHub.</li>
 		<li>Send a message to your instructor when your code is ready for review.</li>
