--- a/assignments.html
+++ b/assignments.html
@@ -60,6 +60,11 @@
 		<li><a href="assignments/011515.html">Thursday, January 15</a></li>
 	</ul>
 
+	<h2>Week 3</h2>
+	<ul>
+		<li><a href="assignments/011915.html">Monday, January 19</a></li>
+	</ul>
+
 </main> <!-- /.mainContent -->
 
 <script src="js/script.js"></script>
