--- a/assignments/011915.html
+++ b/assignments/011915.html
@@ -42,28 +42,24 @@
 </header> <!-- /.siteHeader -->
 
 <main class="mainContent" id="mainContent" role="main">
-	<h1>Assignments for Thursday, January 15</h1>
+	<h1>Assignments for Monday, January 19</h1>
 
-	<h2>Columbia Museum of Art Membership Page</h2>
+	<p>Note: JavaScript examples from class are posted as part of my <a href="https://github.com/greglunn/cma">CMA GitHub repository</a>.</p>
+	<h2>JavaScript</h2>
 	
 	<ul>
-		<li>Build the membership page using HTML and responsive CSS. Breakpoints should appear like this:
-			<ol>
-				<li><a href="http://greglunn.github.io/cma/design/small.html">Small, default styles</a></li>
-				<li><a href="http://greglunn.github.io/cma/design/med.html">Medium, above 660px</a></li>
-				<li><a href="http://greglunn.github.io/cma/design/large.html">Large, above 840px</a></li>
-				<li><a href="http://greglunn.github.io/cma/design/max.html">Maximum, above 1000px</a></li>
-			</ol>
-		</li>
-		<li>Content and image assets are here: <a href="https://github.com/greglunn/cma">https://github.com/greglunn/cma</a>.</li>
-		<li>Build <b>Mobile First&trade;</b>. Start with the smallest size styles, and use min-width @media queries to alter the styles as the page gets wider.</li>
-		<li>Use Git to commit your work, and push to a repository called "cma" on GitHub.</li>
-		<li>Send a message to your instructor when your code is ready for review.</li>
+		<li>Complete the exercises in the "Introduction to JavaScript" and "Functions" sections of the <a href="http://www.codecademy.com/en/tracks/javascript">Codecademy JavaScript Course</a>. Only the first two sections are required, but you may continue with more advanced topics if you like.</li>
+		<li>When you complete the "Rock Paper Scissors" example, copy and paste your full JavaScript code from Codecademy into a &lt;script&gt; tag in a new HTML file. Save this file as "rockpaperscissors.html" in the Columbia Museum of Art site and push it to GitHub.</li>
 	</ul>
 
-	<h2>Beast Mode</h2>
+	<h2>jQuery</h2>
 	<ul>
-		<li>Complete the other main pages for the Columbia Museum of Art, as linked in the main navigation. Use the content found on their current site. <a href="http://www.columbiamuseum.org/about/">http://www.columbiamuseum.org/about/</a> Style the new pages with the same fonts, colors, and responsiveness as the example above. Include the secondary nav at the bottom of the page in mobile views, and as a sidebar as the site gets wide enough.</li>
+		<li><a href="http://greglunn.github.io/webdesign/gio-js/index.html">Review Gio's jQuery examples.</a></li>
+		<li>Create a "Menu" button for the Columbia Museum of Art web page from last week's homework. Style the button to match the exisitng webpage styles.</li>
+		<li>Add jQuery to the Membership page.</li>
+		<li>Create and link an external script.js file to the Membership page.</li>
+		<li>Use jQuery to hide the menu when the page loads, and to toggle the menu when the button is clicked or tapped.</li>
+		<li>Commit and push your example to GitHub, and email the link to your instructor.</li>
 	</ul>
 
 </main> <!-- /.mainContent -->
