Add links to homework

--- a/assignments/011915.html
+++ b/assignments/011915.html
@@ -62,6 +62,16 @@
 		<li>Commit and push your example to GitHub, and email the link to your instructor.</li>
 	</ul>
 
+
+	<h3>jQuery Documentation</h3>
+    <ul>
+        <li><a href="http://api.jquery.com/click/">The Click event</a></li>
+        <li><a href="http://api.jquery.com/category/effects/">jQuery Effects</a></li>
+        <li><a href="http://api.jquery.com/category/events/">jQuery Events</a></li>
+        <li><a href="http://api.jquery.com/category/selectors/">Selectors</a></li>
+        <li><a href="http://api.jquery.com/category/manipulation/">Functions to Change your HTML</a></li>
+    </ul>
+
 </main> <!-- /.mainContent -->
 
 <script src="../js/script.js"></script>
