Add links to homework

--- a/assignments/011915.html
+++ b/assignments/011915.html
@@ -72,6 +72,12 @@
         <li><a href="http://api.jquery.com/category/manipulation/">Functions to Change your HTML</a></li>
     </ul>
 
+    <h3>Helpful links</h3>
+    <ul>
+    	<li><a href="http://jqfundamentals.com/chapter/javascript-basics">JavaScript Basics</a></li>
+    	<li><a href="http://jqfundamentals.com/">jQuery Basics</a></li>
+    </ul>
+
 </main> <!-- /.mainContent -->
 
 <script src="../js/script.js"></script>
