--- a/assignments.html
+++ b/assignments.html
@@ -63,6 +63,7 @@
 	<h2>Week 3</h2>
 	<ul>
 		<li><a href="assignments/011915.html">Monday, January 19</a></li>
+		<li><a href="assignments/012015.html">Tuesday, January 20</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
