--- a/assignments/012015.html
+++ b/assignments/012015.html
@@ -55,7 +55,7 @@
 		<li>Review the Project Brief to get a clear picture of the client's goals and the purpose of the website.</li>
 		<li>Review the <a href="http://murphygrantland.com/">current site</a>, and the provided content.</li>
 		<li>Create a minimum of 25 sketches for the homepage, and 25 sketches for internal pages of the site. Keep the sketches simple and loose, but begin to work out the possible structure of the website.</li>
-		<li>Choose your strongest internal sketches, and your strongest homepage idea. Refine these into two sets of clean wireframes using Illustrator. Be sure to consider responsive views.</li>
+		<li>Choose your strongest internal sketches, and your strongest homepage idea. Refine these into at least two sets of clean wireframes using Illustrator. Be sure to consider responsive views.</li>
 	</ul>
 
 </main> <!-- /.mainContent -->
