--- a/timeline.html
+++ b/timeline.html
@@ -83,67 +83,71 @@
 		<h1 class="h2">WEEK 3:</h1>
 		<p>JavaScript (overview)<br>
 			jQuery</p>
-
-		<p>SASS, Compass</p>
-
-		<p>Content Strategy<br>
-		User-Centered Design</p>
+		<p>Sketching<br>
+		Wireframing<br>
+		Prototyping<br>
+		Photoshop, Illustrator comps</p>
 	</section>
 	
 	<section class="week">
 		<h1 class="h2">WEEK 4:</h1>
-		<p>Sketching<br>
-		Wireframing<br>
-		Prototyping<br>
-		Interaction, Behavior<br>
-		Photoshop, Illustrator comps</p>
-	</section>
+		<p>Content Strategy<br>
+		User-Centered Design</p>
 
-	<section class="week">
-		<h1 class="h2">WEEK 5:</h1>
 		<p>Design Foundations<br>
 		Design Principles<br>
 		Color Theory<br>
 		Typography<br>
 		Iconography<br>
 		Grid-based design</p>
+		
 	</section>
 
 	<section class="week">
-		<h1 class="h2">WEEK 6:</h1>
+		<h1 class="h2">WEEK 5:</h1>
+		<p>SASS, Compass</p>
 		<p>Testing<br>
 		Problem-solving<br>
 		Browser testing<br>
 		Device testing<br>
 		Accessibility</p>
+		
+		
+	</section>
+
+	<section class="week">
+		<h1 class="h2">WEEK 6:</h1>
+		<p>Performance<br>
+		Image optimization<br>
+		Automation<br>
+		Content Management</p>
 	</section>
 
 	<section class="week">
 		<h1 class="h2">WEEK 7:</h1>
-		<p>Performance<br>
-		Image optimization<br>
-		Automation<br>
-		Content Management<br>
+		<p>Email design<br>
+		Building email templates<br>
+		Responsive email</p>
 	</section>
 
 	<section class="week">
 		<h1 class="h2">WEEK 8:</h1>
-		<p>Email design<br>
-		Building email templates<br>
-		Responsive email<br>
+		<p>Project work<br>
+		Portfolio preparation</p>
 	</section>
 
 	<section class="week">
 		<h1 class="h2">WEEK 9:</h1>
 		<p>Flex week - review<br>
 		Wrap up other projects<br>
-		Prep for Final Project<br>
 		Presentation skills</p>
 	</section>
 
 	<section class="week">
 		<h1 class="h2">WEEK 10-12:</h1>
-		<p>Final Project</p>
+		<p>Portfolio reviews<br>
+		Additional refining and polishing<br>
+		Final presentation</p>
 	</section>
 
 </main> <!-- /.mainContent -->
