Add new assignment

--- a/assignments/012115.html
+++ b/assignments/012115.html
@@ -12,7 +12,7 @@
 
 	<script src="//use.typekit.net/pjr3opl.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
         <script src="js/vendor/html5shiv.js"></script>
@@ -27,48 +27,36 @@
 
 <header class="siteHeader" role="banner">
 	<div class="wrapper">
-		<h1 class="logo"><a href="index.html">The Iron Yard</a></h1>
+		<h1 class="logo"><a href="../index.html">The Iron Yard</a></h1>
 		<p class="className">Web Design <span>January 2015 - Columbia, SC</span></p>
 		<nav class="pageNav">
 			<ul>
-				<li><a href="timeline.html">Timeline</a></li>
-				<li><a href="schedule.html">Schedule</a></li>
-				<li><a href="policies.html">Policies</a></li>
-				<li><a href="assignments.html">Assignments</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="../timeline.html">Timeline</a></li>
+				<li><a href="../schedule.html">Schedule</a></li>
+				<li><a href="../policies.html">Policies</a></li>
+				<li><a href="../assignments.html">Assignments</a></li>
+				<li><a href="../contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</div> <!-- /.wrapper -->
 </header> <!-- /.siteHeader -->
 
 <main class="mainContent" id="mainContent" role="main">
-	<h1>Assignments</h1>
+	<h1>Assignments for Wednesday, January 21</h1>
 
-	<h2>Week 1</h2>
-	<ul>
-		<li><a href="assignments/010515.html">Monday, January 5</a></li>
-		<li><a href="assignments/010615.html">Tuesday, January 6</a></li>
-		<li><a href="assignments/010715.html">Wednesday, January 7</a></li>
-		<li><a href="assignments/010815.html">Thursday, January 8</a></li>
-	</ul>
+	<h2>New Website Design: Murphy &amp; Grantland, P.A.</h2>
 
-	<h2>Week 2</h2>
-	<ul>
-		<li><a href="assignments/011215.html">Monday, January 12</a></li>
-		<li><a href="assignments/011315.html">Tuesday, January 13</a></li>
-		<li><a href="assignments/011415.html">Wednesday, January 14</a></li>
-		<li><a href="assignments/011515.html">Thursday, January 15</a></li>
-	</ul>
+	<a href="https://dl.dropboxusercontent.com/u/5231669/murphygrantland.zip" class="button">Download Project Files</a>
 
-	<h2>Week 3</h2>
+	<h3>Website Design</h3>
 	<ul>
-		<li><a href="assignments/011915.html">Monday, January 19</a></li>
-		<li><a href="assignments/012015.html">Tuesday, January 20</a></li>
-		<li><a href="assignments/012115.html">Wednesday, January 21</a></li>
+		<li>Consider feedback from today's review of sketches and wireframes.</li>
+		<li>Create fully-designed mockups of the Murphy &amp; Grantland website using Photoshop or Illustrator. Be sure to consider responsive views.</li>
+		<li>Create a new GitHub repository for this project. Include your designs in a "design" folder and push to GitHub. Email your instructor with the link to the repository.</li>
 	</ul>
 
 </main> <!-- /.mainContent -->
 
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
