Add resource links

--- a/assignments/012115.html
+++ b/assignments/012115.html
@@ -55,6 +55,12 @@
 		<li>Create a new GitHub repository for this project. Include your designs in a "design" folder and push to GitHub. Email your instructor with the link to the repository.</li>
 	</ul>
 
+	<h3>Resources</h3>
+	<ul>
+		<li><a href="http://guides.library.harvard.edu/content.php?pid=500088&sid=4113929">Finding Creative Commons images</a></li>
+		<li><a href="http://greglunn.github.io/webdesign/prework.html">Class Pre-work links for reference</a></li>
+	</ul>
+
 </main> <!-- /.mainContent -->
 
 <script src="../js/script.js"></script>
