--- a/assignments/012115.html
+++ b/assignments/012115.html
@@ -57,7 +57,7 @@
 
 	<h3>Resources</h3>
 	<ul>
-		<li><a href="http://guides.library.harvard.edu/content.php?pid=500088&sid=4113929">Finding Creative Commons images</a></li>
+		<li><a href="http://guides.library.harvard.edu/content.php?pid=500088&sid=4113929">Finding Public Domain &amp; Creative Commons Media</a></li>
 		<li><a href="http://greglunn.github.io/webdesign/prework.html">Class Pre-work links for reference</a></li>
 	</ul>
 
