--- a/assignments.html
+++ b/assignments.html
@@ -65,6 +65,7 @@
 		<li><a href="assignments/011915.html">Monday, January 19</a></li>
 		<li><a href="assignments/012015.html">Tuesday, January 20</a></li>
 		<li><a href="assignments/012115.html">Wednesday, January 21</a></li>
+		<li><a href="assignments/012215.html">Thursday, January 22</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
