Update contact info

--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
 				}
 				</script>
 			</li>
-			<li><span>Hipchat:</span> </li>
+			<li><span>Hipchat:</span> @gene</li>
 			<li><span>Skype:</span> gene803</li>
 			<li><span>Twitter: </span><a href="http://www.twitter.com/genecrawford">@genecrawford</a></li>
 		</ul>
@@ -164,7 +164,7 @@
 				}
 				</script>
 			</li>
-			<li><span>Hipchat:</span> </li>
+			<li><span>Hipchat:</span> @JohnDavidHunt</li>
 			<li><span>Skype:</span> isleepinpajamas</li>
 			<li><span>Twitter: </span><a href="http://www.twitter.com/genecrawford">@johndavidhunt</a></li>
 		</ul>
