--- a/assignments.html
+++ b/assignments.html
@@ -68,6 +68,12 @@
 		<li><a href="assignments/012215.html">Thursday, January 22</a></li>
 	</ul>
 
+	<h2>Week 4</h2>
+	<ul>
+		<li><a href="assignments/012615.html">Monday, January 26</a></li>
+		<li><a href="assignments/012715.html">Tuesday, January 27</a></li>
+	</ul>
+
 </main> <!-- /.mainContent -->
 
 <script src="js/script.js"></script>
