Add link to presentation

--- a/assignments/012715.html
+++ b/assignments/012715.html
@@ -45,7 +45,8 @@
 	<h1>Assignments for Tuesday, January 27</h1>
 
 	<h2>Design Principles: Visual Perception and the Principles of Gestalt</h2>
-
+	
+	<a href="http://greglunn.github.io/webdesign/pdf/gestalt.pdf">View Presentation</a>
 	<ul>
 		<li>Using Photoshop or Illustrator, create illustrations for each of the primary principles of Gestalt listed below.
 			<ul>
