Add button class

--- a/assignments/012715.html
+++ b/assignments/012715.html
@@ -46,7 +46,7 @@
 
 	<h2>Design Principles: Visual Perception and the Principles of Gestalt</h2>
 	
-	<a href="http://greglunn.github.io/webdesign/pdf/gestalt.pdf">View Presentation</a>
+	<a href="http://greglunn.github.io/webdesign/pdf/gestalt.pdf" class="button">View Presentation</a>
 	<ul>
 		<li>Using Photoshop or Illustrator, create illustrations for each of the primary principles of Gestalt listed below.
 			<ul>
