New website assignment, typography resources

--- a/assignments.html
+++ b/assignments.html
@@ -43,36 +43,46 @@
 
 <main class="mainContent" id="mainContent" role="main">
 	<h1>Assignments</h1>
+	<p>Assignments are posted daily at the end of each lecture.</p>
 
-	<h2>Week 1</h2>
-	<ul>
-		<li><a href="assignments/010515.html">Monday, January 5</a></li>
-		<li><a href="assignments/010615.html">Tuesday, January 6</a></li>
-		<li><a href="assignments/010715.html">Wednesday, January 7</a></li>
-		<li><a href="assignments/010815.html">Thursday, January 8</a></li>
-	</ul>
+	<div class="contact">
+		<h2>Week 1</h2>
+		<ul>
+			<li><a href="assignments/010515.html">Monday, January 5</a></li>
+			<li><a href="assignments/010615.html">Tuesday, January 6</a></li>
+			<li><a href="assignments/010715.html">Wednesday, January 7</a></li>
+			<li><a href="assignments/010815.html">Thursday, January 8</a></li>
+		</ul>
+	</div>
 
-	<h2>Week 2</h2>
-	<ul>
-		<li><a href="assignments/011215.html">Monday, January 12</a></li>
-		<li><a href="assignments/011315.html">Tuesday, January 13</a></li>
-		<li><a href="assignments/011415.html">Wednesday, January 14</a></li>
-		<li><a href="assignments/011515.html">Thursday, January 15</a></li>
-	</ul>
+	<div class="contact">
+		<h2>Week 2</h2>
+		<ul>
+			<li><a href="assignments/011215.html">Monday, January 12</a></li>
+			<li><a href="assignments/011315.html">Tuesday, January 13</a></li>
+			<li><a href="assignments/011415.html">Wednesday, January 14</a></li>
+			<li><a href="assignments/011515.html">Thursday, January 15</a></li>
+		</ul>
+	</div>
 
-	<h2>Week 3</h2>
-	<ul>
-		<li><a href="assignments/011915.html">Monday, January 19</a></li>
-		<li><a href="assignments/012015.html">Tuesday, January 20</a></li>
-		<li><a href="assignments/012115.html">Wednesday, January 21</a></li>
-		<li><a href="assignments/012215.html">Thursday, January 22</a></li>
-	</ul>
+	<div class="contact">
+		<h2>Week 3</h2>
+		<ul>
+			<li><a href="assignments/011915.html">Monday, January 19</a></li>
+			<li><a href="assignments/012015.html">Tuesday, January 20</a></li>
+			<li><a href="assignments/012115.html">Wednesday, January 21</a></li>
+			<li><a href="assignments/012215.html">Thursday, January 22</a></li>
+		</ul>
+	</div>
 
-	<h2>Week 4</h2>
-	<ul>
-		<li><a href="assignments/012615.html">Monday, January 26</a></li>
-		<li><a href="assignments/012715.html">Tuesday, January 27</a></li>
-	</ul>
+	<div class="contact">
+		<h2>Week 4</h2>
+		<ul>
+			<li><a href="assignments/012615.html">Monday, January 26</a></li>
+			<li><a href="assignments/012715.html">Tuesday, January 27</a></li>
+			<li><a href="assignments/012815.html">Wednesday, January 28</a></li>
+		</ul>
+	</div>
 
 </main> <!-- /.mainContent -->
 
