Add weekend assignment

--- a/assignments.html
+++ b/assignments.html
@@ -81,6 +81,7 @@
 			<li><a href="assignments/012615.html">Monday, January 26</a></li>
 			<li><a href="assignments/012715.html">Tuesday, January 27</a></li>
 			<li><a href="assignments/012815.html">Wednesday, January 28</a></li>
+			<li><a href="assignments/012915.html">Thursday, January 29</a></li>
 		</ul>
 	</div>
 
