--- a/timeline.html
+++ b/timeline.html
@@ -95,21 +95,19 @@
 		Design Principles<br>
 		Color Theory<br>
 		Typography<br>
-		Iconography<br>
-		Grid-based design</p>
+		Iconography</p>
 		
 	</section>
 
 	<section class="week">
 		<h1 class="h2">WEEK 5:</h1>
+		<p>Grid-based design</p>
 		<p>SASS, Compass</p>
 		<p>Testing<br>
 		Problem-solving<br>
 		Browser testing<br>
 		Device testing<br>
 		Accessibility</p>
-		
-		
 	</section>
 
 	<section class="week">
