--- a/assignments.html
+++ b/assignments.html
@@ -85,6 +85,14 @@
 		</ul>
 	</div>
 
+	<div class="contact">
+		<h2>Week 5</h2>
+		<ul>
+			<li><a href="assignments/020215.html">Monday, February 2</a></li>
+			<li><a href="assignments/020315.html">Tuesday, February 3</a></li>
+		</ul>
+	</div>
+
 </main> <!-- /.mainContent -->
 
 <script src="js/script.js"></script>
