--- a/timeline.html
+++ b/timeline.html
@@ -103,9 +103,7 @@
 		<h1 class="h2">WEEK 5:</h1>
 		<p>Grid-based design</p>
 		<p>SASS, Compass</p>
-		<p>Testing<br>
-		Problem-solving<br>
-		Browser testing<br>
+		<p>Browser testing<br>
 		Device testing<br>
 		Accessibility</p>
 	</section>
