Add SASS assignments

--- a/assignments/020415.html
+++ b/assignments/020415.html
@@ -42,26 +42,28 @@
 </header> <!-- /.siteHeader -->
 
 <main class="mainContent" id="mainContent" role="main">
-	<h1>Assignments for Monday, February 2</h1>
+	<h1>Assignments for Wednesday, February 4</h1>
 
-	<h2>Website Build: SC Center for Fathers and Families</h2>
+	<h2>SASS</h2>
 
-	<p><a href="https://dl.dropboxusercontent.com/u/5231669/cff.zip" class="button">Download Resources</a></p>
+	<p><a href="https://github.com/greglunn/sassexamples" class="button">Download In-Class Examples</a></p>
 
-	<p>You've received a new assignment to create the website for the SC Center for Fathers and Families!</p>
-	<p>The timeline for this project is one week. Final websites are due next Wednesday, February 4.</p>
+	<p>Welcome to the world of SASS! Your assignment is to switch your latest project to use SASS.</p>
+
+	<ol>
+		<li>Create a folder named "scss" to contain your new sass files.</li>
+		<li>Copy current styles from "styles.css" into a new SASS file named "styles.scss" and save it into the "scss" folder.</li>
+		<li>Run SASS so thath it watches for changes and compiles your CSS: <code>sass --watch scss:css</code></li>
+		<li>Use variables, mixins, partials, etc. as appropriate to simplify your CSS workflow.</li>
+		<li>Email your instructor with a link to the code on GitHub.</li>
+	</ol>
+
+	<h3>SASS Resources</h3>
 
 	<ul>
-		<li>Continue HTML and CSS build for this website.</li>
-		<li>Tuesday will be small group critiques of code.</li>
-		<li>Aim to complete builds by Wednesday AM.</li>
-	</ul>
-
-	<h3>Grid Design Resources</h3>
-
-	<ul>
-		<li><a href="http://960.gs/">960 Grid System (outdated, but good examples and resources)</a></li>
-		<li><a href="http://en.wikipedia.org/wiki/Golden_ratio">The Golden Ratio</a></li>
+		<li><a href="http://sass-lang.com/guide">SASS Basics</a></li>
+		<li><a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html">SASS Documentation</a></li>
+		<li><a href="https://github.com/greglunn/sassexamples/blob/master/scss/_mixins.scss">Greg's SASS Media Query Mixin</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
