--- a/assignments.html
+++ b/assignments.html
@@ -90,6 +90,7 @@
 		<ul>
 			<li><a href="assignments/020215.html">Monday, February 2</a></li>
 			<li><a href="assignments/020315.html">Tuesday, February 3</a></li>
+			<li><a href="assignments/020415.html">Wednesday, February 4</a></li>
 		</ul>
 	</div>
 
