--- a/assignments/020415.html
+++ b/assignments/020415.html
@@ -53,7 +53,7 @@
 	<ol>
 		<li>Create a folder named "scss" to contain your new sass files.</li>
 		<li>Copy current styles from "styles.css" into a new SASS file named "styles.scss" and save it into the "scss" folder.</li>
-		<li>Run SASS so thath it watches for changes and compiles your CSS: <code>sass --watch scss:css</code></li>
+		<li>Run SASS so that it watches for changes and compiles your CSS: <code>sass --watch scss:css</code></li>
 		<li>Use variables, mixins, partials, etc. as appropriate to simplify your CSS workflow.</li>
 		<li>Email your instructor with a link to the code on GitHub.</li>
 	</ol>
