Additional SASS Resources

--- a/assignments/020415.html
+++ b/assignments/020415.html
@@ -64,6 +64,8 @@
 		<li><a href="http://sass-lang.com/guide">SASS Basics</a></li>
 		<li><a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html">SASS Documentation</a></li>
 		<li><a href="https://github.com/greglunn/sassexamples/blob/master/scss/_mixins.scss">Greg's SASS Media Query Mixin</a></li>
+		<li><a href="http://alistapart.com/article/why-sass">Why SASS?</a></li>
+		<li><a href="http://thesassway.com/beginner/the-inception-rule">Nested Selectors: The Inception Rule</a></li>
 	</ul>
 
 </main> <!-- /.mainContent -->
