--- a/assignments.html
+++ b/assignments.html
@@ -91,6 +91,7 @@
 			<li><a href="assignments/020215.html">Monday, February 2</a></li>
 			<li><a href="assignments/020315.html">Tuesday, February 3</a></li>
 			<li><a href="assignments/020415.html">Wednesday, February 4</a></li>
+			<li><a href="assignments/020515.html">Thursday, February 5</a></li>
 		</ul>
 	</div>
 
