Add assignment link

--- a/assignments.html
+++ b/assignments.html
@@ -95,6 +95,13 @@
 		</ul>
 	</div>
 
+	<div class="contact">
+		<h2>Week 6</h2>
+		<ul>
+			<li><a href="assignments/020915.html">Monday, February 9</a></li>
+		</ul>
+	</div>
+
 </main> <!-- /.mainContent -->
 
 <script src="js/script.js"></script>
