--- a/assignments.html
+++ b/assignments.html
@@ -101,6 +101,12 @@
 			<li><a href="assignments/020915.html">Monday, February 9</a></li>
 		</ul>
 	</div>
+	<div class="contact">
+		<h2>Week 7</h2>
+		<ul>
+			<li><a href="assignments/021815.html">Wednesday, February 18</a></li>
+		</ul>
+	</div>
 
 </main> <!-- /.mainContent -->
 
