--- a/assignments/021815.html
+++ b/assignments/021815.html
@@ -56,7 +56,7 @@
 		<li>Build the page using HTML, Sass, and JavaScript. Make it responsive.</li>
 	</ul>
 
-	<p><b>Final HTML build for the One Columbia website is due Monday, March 2 at 9:00am.</b></p>
+	<p><b>Final HTML build for the Conquest Brewing Company website is due Monday, March 2 at 9:00am.</b></p>
 
 	<p><a href="http://www.yelp.com/biz/conquest-brewing-columbia">Reviews for Conquest Brewing Company on Yelp!</a><br>
 	Competitive Analysis: <a href="http://www.riverratbrewery.com/">River Rat Brewery</a><br>
