--- a/assignments.html
+++ b/assignments.html
@@ -107,6 +107,12 @@
 			<li><a href="assignments/021815.html">Wednesday, February 18</a></li>
 		</ul>
 	</div>
+	<div class="contact">
+		<h2>Week 9</h2>
+		<ul>
+			<li><a href="assignments/030215.html">Monday, March 2</a></li>
+		</ul>
+	</div>
 
 </main> <!-- /.mainContent -->
 
