--- a/assignments/030215.html
+++ b/assignments/030215.html
@@ -51,7 +51,7 @@
 	<p>Greenville GROK needs a new website design and build for the April 29 - May 1, 2015 event.</p>
 
 	<ul>
-		<li>Begin sketching and designing ideas.</li>
+		<li>Begin sketching, wireframing and designing ideas.</li>
 		<li>Build the page using HTML, Sass, and JavaScript. Make it responsive.</li>
 	</ul>
 
