--- a/assignments/030215.html
+++ b/assignments/030215.html
@@ -58,7 +58,8 @@
 	<p><b>Final HTML build for the Greenville GROK website is due Wednesday, March 11 at 9:00am.</b></p>
 
 	<p><a href="https://lessaccounting.com/blog/why-greenville-grok-was-a-great-tech-conference/">Why Greenville GROK was a Great Tech Conference</a> by Allan Branch<br>
-	<a href="http://klare.io/some-highlights-from-grok.html">Some Highlights from GROK</a> by Klare Frank
+	<a href="http://klare.io/some-highlights-from-grok.html">Some Highlights from GROK</a> by Klare Frank<br>
+	<a href="https://vimeo.com/112943815">Greenville GROK Introduction Video</a>
 	</p>
 
 </main> <!-- /.mainContent -->
