--- a/assignments/030215.html
+++ b/assignments/030215.html
@@ -46,7 +46,7 @@
 
 	<h2>Greenville GROK</h2>
 
-	<p><a href="pdf/greenvillegrok.pdf" class="button">Download Project Brief</a> <a href="https://dl.dropboxusercontent.com/u/5231669/grok.zip" class="button">Download GROK Assets</a></p>
+	<p><a href="../pdf/greenvillegrok.pdf" class="button">Download Project Brief</a> <a href="https://dl.dropboxusercontent.com/u/5231669/grok.zip" class="button">Download GROK Assets</a></p>
 
 	<p>Greenville GROK needs a new website design and build for the April 29 - May 1, 2015 event.</p>
 
