Fix broken link

--- a/assignments/031115.html
+++ b/assignments/031115.html
@@ -58,7 +58,7 @@
 
 	<h3>Complete portfolio projects</h3>
 	<p>Decide which projects (minimum 3, better 4 or 5) will be featured in your website. Refine and complete these projects, and collect sketches, wireframes, and early designs to include in the porfolio, in order to help tell the story.</p>
-	<p>Be sure to test your final websites thoroughly. <a href="pdf/fe-checklist.pdf">Use this checklist.</a></p>
+	<p>Be sure to test your final websites thoroughly. <a href="../pdf/fe-checklist.pdf">Use this checklist.</a></p>
 	<p><b>Portfolios must be ready for reviews on Friday, March 20.</b></p>
 
 </main> <!-- /.mainContent -->
